# PA2---C-

./: .gitignore
cvicne_ulohy/1/: a.out  test  test.cpp  testv2.cpp
cvicne_ulohy/2/: a.out  test  test.cpp
cvicne_ulohy/3/: a.out  test  test.cpp
cvicne_ulohy/4/: test.cpp
domaci_ulohy/2/: a.out  test  test (kopie).cpp  test.cpp
domaci_ulohy/3/: a.out  test  test.cpp  text
domaci_ulohy/4/: 4strcpy.cpp  a.out  test  test.cpp  text
domaci_ulohy/5/: a.out  test_3  test_3.cpp  text
domaci_ulohy/6/: CMakeLists.txt  a.out  main  main.cpp  main2  main2.cpp  test.out
domaci_ulohy/7/: CMakeLists.txt  main.cpp
exam/1.6.2023sparse/: CMakeLists.txt  sparse.cpp
exam/15.6.2023battleRoyal/: CMakeLists.txt  main.cpp
exam/16.6.2022delivery/: CMakeLists.txt  main.cpp
exam/20.6.2019/: CMakeLists.txt  main.cpp
exam/22.6.2023kolonizace/: CMakeLists.txt  main.cpp
exam/22.6.2023matrix2/: CMakeLists.txt  main.cpp
semestral_project/: CMakeLists.txt  Doxyfile  Makefile  README.md  jechjose  prohlaseni.txt  zadani.txt
semestral_project/src/: CApplication.cpp  CApplication.h  main.cpp
semestral_project/src/additional_for_notes/: CDate.cpp  CDate.h  CTag.cpp  CTag.h
semestral_project/src/menus/: CLeftEditMenu.cpp  CLeftEditMenu.h  CLeftFileMenu.cpp  CLeftFileMenu.h  CLeftFolderMenu.cpp  CLeftFolderMenu.h  CLeftMenuBar.cpp  CLeftMenuBar.h  CMenu.cpp  CMenu.h
semestral_project/src/notes/: CFileManager.cpp  CFileManager.h  CFolder.cpp  CFolder.h  CNote.cpp  CNote.h  CShopList.cpp  CShopList.h  CTextNote.cpp  CTextNote.h  CToDoList.cpp  CToDoList.h
(+83 files in other folders)
